--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,13 @@ env:
 
 on:
   push:
-    branches: [ master, dev ]
+    branches: 
+      - master
+      - dev
   pull_request:
-    branches: [ master, dev ]
+    branches:
+      - master
+      - dev
 
 jobs:
   build_and_deploy:
