--- a/package.json
+++ b/package.json
@@ -30,13 +30,12 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint src"
+    "lint": "eslint --max-warnings=0 src",
+    "fix-lint": "eslint src --fix"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run lint",
-      "pre-push": "npm run lint"
-    }
+  "gitHooks": {
+    "pre-commit": "npm run lint",
+    "pre-push": "npm run lint"
   },
   "eslintConfig": {
     "extends": [
@@ -65,6 +64,6 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.4"
+    "yorkie": "^2.0.0"
   }
 }
