--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,10 +25,8 @@
             "error",
             2
         ],
-        "linebreak-style": [
-            "error",
-            "windows"
-        ],
+        "linebreak-style": 0,
+    
         "quotes": [
             "error",
             "single"
