--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.3",
     "@react-three/drei": "^8.2.0",
-    "@react-three/fiber": "^7.0.21",
+    "@react-three/fiber": "^7.0.26",
+    "@react-three/postprocessing": "^2.1.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -22,7 +23,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-spring": "^9.3.2",
-    "three": "^0.135.0",
+    "three": "^0.137.5",
     "three-gltf-loader": "^1.111.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
