--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-spring": "^9.3.2",
     "three": "^0.137.5",
     "three-gltf-loader": "^1.111.0",
+    "three-stdlib": "^2.8.6",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
