--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,20 +27,7 @@ jobs:
         run: |
           yarn install
           yarn build
-      - name: deploy to OVH VPS prod (.xyz)
-        uses: garygrossgarten/github-action-scp@master
-        if: github.ref == 'refs/heads/master'
-        with:
-          host: ${{secrets.SSH_HOST}}
-          privateKey: ${{secrets.SSH_KEY}}
-          username: ${{secrets.SSH_USERNAME}}
-          
-          local: 'build'
-          remote: '/var/www/html/wtow.xyz/'
-          recursive: true
-          atomicPut: true
-          dotfiles: true
-      - name: deploy to OVH VPS prod (.fr)
+      - name: deploy to OVH VPS prod
         uses: garygrossgarten/github-action-scp@master
         if: github.ref == 'refs/heads/master'
         with:
@@ -53,20 +40,7 @@ jobs:
           recursive: true
           atomicPut: true
           dotfiles: true
-      - name: deploy to OVH VPS dev (.xyz)
-        uses: garygrossgarten/github-action-scp@master
-        if: github.ref == 'refs/heads/dev'
-        with:
-          host: ${{secrets.SSH_HOST}}
-          privateKey: ${{secrets.SSH_KEY}}
-          username: ${{secrets.SSH_USERNAME}}
-          
-          local: 'build'
-          remote: '/var/www/html/dev.wtow.xyz/'
-          recursive: true
-          atomicPut: true
-          dotfiles: true
-      - name: deploy to OVH VPS dev (.fr)
+      - name: deploy to OVH VPS dev
         uses: garygrossgarten/github-action-scp@master
         if: github.ref == 'refs/heads/dev'
         with:
