--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.2.3",
     "@react-three/drei": "^8.2.0",
     "@react-three/fiber": "^7.0.26",
