--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@types/three": "^0.135.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.5",
     "react-scripts": "4.0.3",
     "react-spring": "^9.3.2",
     "three": "^0.137.5",
